syntax = "proto3";

package pb;
option go_package = "github.com/mproyyan/grpc-shipping-microservice/pb";

import "google/protobuf/timestamp.proto";

message Leg {
    string voyage_number = 1;
    string load_location = 2;
    string unload_location = 3;
    google.protobuf.Timestamp load_time = 4;
    google.protobuf.Timestamp unload_time = 5;
}

message Itinerary {
    int64 id = 1;
    repeated Leg legs = 2;
}